<resources>
    <string name="app_name">LectureTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have_1_lecture_today">You have 1 lecture today.</string>
    <string name="you_have_lectures_today">You have %1$d lectures today.</string>
    <string name="add_new_lecture">Add New Lecture</string>
    <string name="course_code">Course Code<font color="#F1214A">*</font></string>
    <string name="course_title">Course Title<font color="#F1214A">*</font></string>
    <string name="start_time">Start Time<font color="#F1214A">*</font></string>
    <string name="select_start_time">select start time</string>
    <string name="end_time">End Time<font color="#F1214A">*</font></string>
    <string name="select_end_time">select end time</string>
    <string name="course_day">Course Days<font color="#F1214A">*</font></string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="repeat_weekly">Repeat Weekly</string>
    <string name="save">SAVE</string>
    <string name="repetition_icon">Repetition Icon</string>
    <string name="update">UPDATE</string>
    <string name="edit_lecture">Edit Lecture</string>
    <string name="time_format">%02d:%02d</string>
    <string name="lecture_start_time_has_not_been_set">Lecture start time has not been set</string>
    <string name="lecture_end_time_has_not_been_set">Lecture end time has not been set</string>
    <string name="lecture_end_time_must_be_later_than_start_time">Lecture end time must be later than start time</string>
    <string name="lecture_start_time_and_end_time_can_t_be_the_same">Lecture start time and end time can\'t be the same</string>
    <string name="lecture_day_hasn_t_been_selected">Lecture day hasn\'t been selected</string>
    <string name="course_startTime_to_endTime">%1$s:%2$s - %3$s:%4$s</string>
    <string name="delete_lecture">Delete Lecture?</string>
    <string name="are_you_sure_you_want_to_delete_this_lecture_you_cannot_recover_it_later">Are you sure you want to delete this lecture?\nYou cannot recover it later!</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="allLecturesButton">allLecturesButton</string>
    <string name="refreshButton">refreshButton</string>
    <string name="today_s_lectures">Today\'s Lectures</string>
    <string name="deleteAllLecturesButton">deleteAllLecturesButton</string>
</resources>