<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddLectureFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="?colorPrimary"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_new_lecture" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/scrollView"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/course_code_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:layout_marginTop="15dp"
                android:padding="20dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginHorizontal="15dp"/>

            <Spinner
                android:id="@+id/course_title_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:layout_below="@id/course_code_spinner"
                android:padding="20dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/course_title_spinner" />

            <LinearLayout
                android:id="@+id/start_time_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="0dp" />


                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_start_time" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/start_time_linear_layout" />

            <LinearLayout
                android:id="@+id/end_time_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="0dp" />


                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_end_time" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/end_time_linear_layout" />

            <LinearLayout
                android:id="@+id/course_day_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider3"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_day" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:id="@+id/monday"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:id="@+id/tuesday"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:id="@+id/wednesday"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:id="@+id/thursday"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:id="@+id/friday"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:id="@+id/saturday"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:id="@+id/sunday"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/course_day_linear_layout" />

            <LinearLayout
                android:id="@+id/repeat_weekly_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider4"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_weekly" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="0dp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/repeat_weekly_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/repeat_weekly_linear_layout"
                android:text="@string/save"
                app:cornerRadius="10dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="10dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/repeat_weekly_linear_layout" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>